--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Holiday Calculator
+# Flight Delays Calculator
 
 [![Build Status](https://travis-ci.org/dougmet/flightsapi.svg?branch=master)](https://travis-ci.org/dougmet/flightsapi)
 [![Docker Automated build](https://img.shields.io/docker/automated/dougmet/flightsapi.svg)]()
